tests/sources/invalid/types/cast_array_to_non_string.fire
// Casting an array to anything other than 'string' is rejected.
int32 main() {
    int32[] arr = [1, 2];
    int32 x = arr as int32;  //~ ERROR FS-SEM-0010 @22
    return x;
}
